--- a/index.html
+++ b/index.html
@@ -11,3 +11,12 @@
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <title>Simulador de Aposentadoria — Liberdade Financeira</title>
+  <meta name="description" content="Descubra quando alcançar sua independência financeira e quanto poderá gastar por mês na aposentadoria. Simples, direto e gratuito.">
+  <link rel="icon" href="/favicon.ico" />
+</head>
