--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-  <title>Simulador de Aposentadoria — Liberdade Financeira</title>
-  <meta name="description" content="Descubra quando alcançar sua independência financeira e quanto poderá gastar por mês na aposentadoria. Simples, direto e gratuito.">
-  <link rel="icon" href="/favicon.ico" />
-</head>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + React + TS</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
+</html>
