--- a/index.html
+++ b/index.html
@@ -11,3 +11,9 @@
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
+
+<meta property="og:title" content="Simulador de Aposentadoria" />
+<meta property="og:description" content="Simule quando atingir sua independência financeira e quanto poderá gastar por mês." />
+<meta property="og:image" content="/og-image.png" />
+<meta property="og:type" content="website" />
+<meta property="og:locale" content="pt_BR" />
