--- a/index.html
+++ b/index.html
@@ -17,3 +17,12 @@
 <meta property="og:image" content="/og-image.png" />
 <meta property="og:type" content="website" />
 <meta property="og:locale" content="pt_BR" />
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <title>Simulador de Aposentadoria — Liberdade Financeira</title>
+  <meta name="description" content="Descubra quando alcançar sua independência financeira e quanto poderá gastar por mês na aposentadoria. Simples, direto e gratuito.">
+  <link rel="icon" href="/favicon.ico" />
+</head>
