--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- Cor do tema do navegador -->
     <meta name="theme-color" content="#165788" />
 
-    <!-- Open Graph (Facebook, LinkedIn, etc.) -->
+    <!-- Open Graph -->
     <meta property="og:title" content="Minhas Calculadoras — Simulador de Aposentadoria" />
     <meta
       property="og:description"
@@ -44,9 +44,13 @@
     />
     <meta name="twitter:image" content="https://www.minhascalculadoras.com/preview.png" />
 
-    <!-- Ícones (coloque os arquivos em /public) -->
+    <!-- Ícones -->
     <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+
+    <!-- Google AdSense (seu client) -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2807386492616114"
+      crossorigin="anonymous"></script>
 
     <!-- Google Analytics 4 -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-B7TS7FYEEM"></script>
@@ -57,7 +61,7 @@
       gtag('config', 'G-B7TS7FYEEM');
     </script>
 
-    <!-- (Opcional) Dados estruturados mínimos -->
+    <!-- Dados estruturados mínimos -->
     <script type="application/ld+json">
       {
         "@context":"https://schema.org",
@@ -67,26 +71,29 @@
         "description":"Simulador de aposentadoria e liberdade financeira em R$ de hoje."
       }
     </script>
+
+    <style>
+      /* Rodapé simples p/ links legais */
+      .site-footer{margin-top:24px;padding:24px 12px;border-top:1px solid #e6e8eb;color:#667;font:14px/1.6 system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif}
+      .site-footer a{color:#165788;text-decoration:none}
+      .site-footer a:hover{text-decoration:underline}
+      .container{max-width:1100px;margin:0 auto;padding:0 12px}
+    </style>
   </head>
   <body>
     <noscript>Ative o JavaScript para usar esta aplicação.</noscript>
+
     <div id="root"></div>
-    <!-- Vite/React entry -->
+    <!-- Entrada Vite/React -->
     <script type="module" src="/src/main.tsx"></script>
+
+    <!-- Rodapé com links legais -->
+    <footer class="site-footer">
+      <div class="container">
+        © Minhas Calculadoras — v1.0 beta ·
+        <a href="/politica-privacidade.html">Política de Privacidade</a> ·
+        <a href="/termos-de-uso.html">Termos de Uso</a>
+      </div>
+    </footer>
   </body>
 </html>
-
-<meta property="og:title" content="Simulador de Aposentadoria" />
-<meta property="og:description" content="Simule quando atingir sua independência financeira e quanto poderá gastar por mês." />
-<meta property="og:image" content="/og-image.png" />
-<meta property="og:type" content="website" />
-<meta property="og:locale" content="pt_BR" />
-
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-  <title>Simulador de Aposentadoria — Liberdade Financeira</title>
-  <meta name="description" content="Descubra quando alcançar sua independência financeira e quanto poderá gastar por mês na aposentadoria. Simples, direto e gratuito.">
-  <link rel="icon" href="/favicon.ico" />
-</head>
