chore: bump footer to v1.0.1 to trigger deploy

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <!-- Rodapé com links legais -->
     <footer class="site-footer">
       <div class="container">
-        © Minhas Calculadoras — v1.0 beta ·
+        © Minhas Calculadoras — v1.0..1 beta ·
         <a href="/politica-privacidade.html">Política de Privacidade</a> ·
         <a href="/termos-de-uso.html">Termos de Uso</a>
       </div>
