--- a/public/termos-de-uso.html
+++ b/public/termos-de-uso.html
@@ -7,13 +7,72 @@
   <meta name="description" content="Termos de Uso da Minhas Calculadoras: condições para utilização dos simuladores e do site." />
   <link rel="icon" href="/favicon.png" />
   <style>
-    body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;line-height:1.65;margin:0;color:#223; background:#fff;}
-    header,main,footer{max-width:900px;margin:auto;padding:16px}
-    h1{font-size:1.8rem;margin:16px 0;color:#165788}
-    h2{font-size:1.2rem;margin-top:24px;color:#165788}
-    a{color:#165788;text-decoration:none} a:hover{text-decoration:underline}
-    .muted{color:#667}
-    footer{border-top:1px solid #e6e8eb;margin-top:24px}
+    body {
+      background: #f6f7f9;
+      color: #222;
+      font-family: 'Inter', system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
+      margin: 0;
+      min-height: 100vh;
+    }
+    .main-container {
+      background: #fff;
+      max-width: 700px;
+      margin: 48px auto 32px auto;
+      border-radius: 2rem;
+      box-shadow: 0 4px 32px 0 rgba(0,0,0,0.07);
+      padding: 40px 32px 32px 32px;
+    }
+    h1 {
+      font-size: 2.2rem;
+      font-weight: 400;
+      color: #111;
+      margin-bottom: 0.5em;
+      letter-spacing: -0.5px;
+    }
+    h2 {
+      font-size: 1.15rem;
+      color: #444;
+      margin-top: 2.2em;
+      margin-bottom: 0.7em;
+      font-weight: 500;
+    }
+    a {
+      color: #165788;
+      text-decoration: none;
+      border-bottom: 1px solid #e0e4ea;
+      transition: border 0.2s;
+    }
+    a:hover {
+      border-bottom: 2px solid #165788;
+    }
+    footer {
+      text-align: center;
+      color: #888;
+      font-size: 0.95em;
+      margin: 32px auto 0 auto;
+      padding: 24px 0 0 0;
+      border-top: 1px solid #ececec;
+      max-width: 700px;
+    }
+    .btn-back {
+      display: inline-block;
+      margin-bottom: 1.5em;
+      color: #888;
+      background: #f3f4f6;
+      border-radius: 999px;
+      padding: 0.4em 1.2em;
+      font-size: 1em;
+      text-decoration: none;
+      transition: background 0.2s;
+    }
+    .btn-back:hover {
+      background: #e5e7eb;
+      color: #222;
+    }
+    .muted {
+      color: #aaa;
+      font-size: 0.95em;
+    }
   </style>
 </head>
 <body>
@@ -21,42 +80,45 @@
   <a href="/" aria-label="Voltar para a página inicial">← Voltar</a>
   <h1>Termos de Uso</h1>
   <p class="muted">Última atualização: 23/09/2025</p>
-</header>
+<body>
+  <div class="main-container">
+    <a href="/" class="btn-back" aria-label="Voltar para a página inicial">← Voltar</a>
+    <h1>Termos de Uso</h1>
+    <p class="muted">Última atualização: 23/09/2025</p>
 
-<main>
-  <h2>1. Objeto</h2>
-  <p>Estes Termos regulam o uso do site <strong>Minhas Calculadoras</strong> e de seus simuladores, disponibilizados para fins informativos e educacionais.</p>
+    <main>
+      <h2>1. Objeto</h2>
+      <p>Estes Termos regulam o uso do site <strong>Minhas Calculadoras</strong> e de seus simuladores, disponibilizados para fins informativos e educacionais.</p>
 
-  <h2>2. Uso permitido</h2>
-  <p>Você se compromete a utilizar o site de forma lícita, respeitando a legislação aplicável, estes Termos e os direitos de terceiros. É vedado o uso para fins ilícitos, automação abusiva, engenharia reversa ou sobrecarga de infraestrutura.</p>
+      <h2>2. Uso permitido</h2>
+      <p>Você se compromete a utilizar o site de forma lícita, respeitando a legislação aplicável, estes Termos e os direitos de terceiros. É vedado o uso para fins ilícitos, automação abusiva, engenharia reversa ou sobrecarga de infraestrutura.</p>
 
-  <h2>3. Propriedade intelectual</h2>
-  <p>O conteúdo, layout, marcas, logotipos e códigos-fonte pertencem aos seus respectivos titulares e são protegidos por leis de propriedade intelectual. É proibida a reprodução sem autorização.</p>
+      <h2>3. Propriedade intelectual</h2>
+      <p>O conteúdo, layout, marcas, logotipos e códigos-fonte pertencem aos seus respectivos titulares e são protegidos por leis de propriedade intelectual. É proibida a reprodução sem autorização.</p>
 
-  <h2>4. Isenção e limitações de responsabilidade</h2>
-  <p>Os simuladores fornecem estimativas com base em informações fornecidas pelo usuário e pressupostos simplificados. <strong>Não constituem aconselhamento financeiro, previdenciário, jurídico ou de investimentos.</strong> Recomendamos consultar profissionais qualificados antes de tomar decisões.</p>
+      <h2>4. Isenção e limitações de responsabilidade</h2>
+      <p>Os simuladores fornecem estimativas com base em informações fornecidas pelo usuário e pressupostos simplificados. <strong>Não constituem aconselhamento financeiro, previdenciário, jurídico ou de investimentos.</strong> Recomendamos consultar profissionais qualificados antes de tomar decisões.</p>
 
-  <h2>5. Disponibilidade</h2>
-  <p>Empregamos esforços para manter o site disponível, mas não garantimos operação ininterrupta, livre de erros ou segura. Podemos modificar ou descontinuar funcionalidades a qualquer momento.</p>
+      <h2>5. Disponibilidade</h2>
+      <p>Empregamos esforços para manter o site disponível, mas não garantimos operação ininterrupta, livre de erros ou segura. Podemos modificar ou descontinuar funcionalidades a qualquer momento.</p>
 
-  <h2>6. Links para terceiros</h2>
-  <p>Podem existir links para sites externos. Não nos responsabilizamos por conteúdo, políticas ou práticas de terceiros.</p>
+      <h2>6. Links para terceiros</h2>
+      <p>Podem existir links para sites externos. Não nos responsabilizamos por conteúdo, políticas ou práticas de terceiros.</p>
 
-  <h2>7. Privacidade</h2>
-  <p>O tratamento de dados pessoais é regido por nossa <a href="/politica-privacidade.html">Política de Privacidade</a>.</p>
+      <h2>7. Privacidade</h2>
+      <p>O tratamento de dados pessoais é regido por nossa <a href="/politica-privacidade.html">Política de Privacidade</a>.</p>
 
-  <h2>8. Alterações</h2>
-  <p>Podemos alterar estes Termos a qualquer momento. A versão atualizada será publicada nesta página e terá efeito imediato.</p>
+      <h2>8. Alterações</h2>
+      <p>Podemos alterar estes Termos a qualquer momento. A versão atualizada será publicada nesta página e terá efeito imediato.</p>
 
-  <h2>9. Foro e legislação</h2>
-  <p>Aplica-se a legislação brasileira. Fica eleito o foro da comarca do seu domicílio, salvo regras de competência legal diversa.</p>
+      <h2>9. Foro e legislação</h2>
+      <p>Aplica-se a legislação brasileira. Fica eleito o foro da comarca do seu domicílio, salvo regras de competência legal diversa.</p>
 
-  <h2>10. Contato</h2>
-  <p>Dúvidas? Escreva para: <a href="mailto:contato@minhascalculadoras.com">contato@minhascalculadoras.com</a>.</p>
-</main>
-
-<footer>
-  <p class="muted">© Minhas Calculadoras. Todos os direitos reservados. <a href="/politica-privacidade.html">Política de Privacidade</a></p>
-</footer>
+      <h2>10. Contato</h2>
+      <p>Dúvidas? Escreva para: <a href="mailto:contato@minhascalculadoras.com">contato@minhascalculadoras.com</a>.</p>
+    </main>
+  </div>
+  <footer>
+    <p class="muted">© Minhas Calculadoras. Todos os direitos reservados. <a href="/politica-privacidade.html">Política de Privacidade</a></p>
+  </footer>
 </body>
-</html>
