--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       "description": "Simule, compare e planeje seu futuro financeiro. Nenhum dado é coletado."
     }
     </script>
-  <link rel="icon" type="image/png" href="/favicon.png.ico" />
+  <link rel="icon" type="image/png" href="/logo-simbolo-sigma.png" />
   <link rel="preload" as="image" href="/preview.png" imagesrcset="/preview.png 1x, /icon-512.png 2x" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <meta name="theme-color" content="#165788" />
